--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
 	},
 	"preview": false,
 	"scripts": {
+		"watch": "webpack --watch --devtool nosources-source-map --mode development",
+		"watchVenus": "grunt watchvenus",
+		"compileAll": "grunt buildvenus && npm run webpack",
 		"compile": "tsc -p ./src",
 		"eslint": "eslint ./src/**/*.ts",
-		"watch": "tsc -w -p ./src",
-		"test": "mocha -u tdd ./out/tests/",
+		"pretest": "npm run compile",
+		"test": "node ./out/test/runTest.js",
 		"package": "vsce package",
 		"publish": "vsce publish",
 		"vscode:prepublish": "webpack --mode production",
@@ -41,28 +44,36 @@
 	},
 	"dependencies": {
 		"await-notify": "1.0.1",
-		"bufferutil": "^4.0.1",
-		"jsdom": "^16.4.0",
-		"kotlin": "^1.4.0",
+		"bufferutil": "^4.0.3",
+		"jsdom": "^16.7.0",
+		"kotlin": "^1.5.30",
 		"lodash": "^4.17.21",
-		"node-localstorage": "^2.1.6",
-		"typescript": "^4.0.2",
-		"utf-8-validate": "^5.0.2",
+		"node-localstorage": "^2.2.1",
+		"typescript": "^4.4.2",
+		"utf-8-validate": "^5.0.5",
 		"vscode-debugadapter": "1.41.1"
 	},
 	"devDependencies": {
+		"@types/glob": "7.1.4",
 		"@types/mocha": "8.0.3",
-		"@types/node": "^14.6.2",
-		"@types/vscode": "^1.48.0",
-		"eslint": "7.8.1",
+		"@types/node": "^14.17.14",
+		"@types/vscode": "^1.59.0",
+		"@typescript-eslint/eslint-plugin": "^4.30.0",
+		"@typescript-eslint/parser": "^4.30.0",
+		"@vscode/test-electron": "^1.6.2",
+		"eslint": "^7.32.0",
+		"eslint-config-standard": "^16.0.3",
+		"eslint-plugin-import": "^2.24.2",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-promise": "^5.1.0",
 		"grunt": "1.3.0",
-		"grunt-cli": "^1.3.2",
+		"grunt-cli": "^1.4.3",
 		"grunt-contrib-copy": "^1.0.0",
 		"grunt-exec": "^3.0.0",
 		"mocha": "8.1.3",
-		"node-loader": "^1.0.2",
-		"ts-loader": "^8.0.11",
-		"vsce": "^1.96.1",
+		"node-loader": "^1.0.3",
+		"ts-loader": "^8.3.0",
+		"vsce": "^1.96.3",
 		"vscode-debugadapter-testsupport": "1.41.0",
 		"webpack": "^5.9.0",
 		"webpack-cli": "^4.2.0"
