--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"await-notify": "1.0.1",
 		"bufferutil": "^4.0.3",
 		"jsdom": "^16.7.0",
+		"json-schema-traverse": "^0.4.1",
 		"kotlin": "^1.5.30",
 		"lodash": "^4.17.21",
 		"node-localstorage": "^2.2.1",
