[CI] Package and upload

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,3 +19,10 @@ jobs:
       run: npx grunt buildvenus
     - name: Build extension
       run: npm run compile
+    - name: Package extension
+      run: npm run package    
+    - run: mv riscv-venus-*.vsix riscv-venus.vsix
+    - uses: actions/upload-artifact@v2
+      with:
+        name: vsix-package
+        path: riscv-venus.vsix
