--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,14 +26,15 @@ jobs:
         run: npm run package
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          name: Release ${{ github.ref }}
           draft: false
           prerelease: false
+          files: ./**.vsix
       - name: Vscode release plugin
         env:
           PUBLISHER_TOKEN: ${{ secrets.PUBLISHER_TOKEN }}
