--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
 		"grunt-cli": "^1.4.3",
 		"grunt-contrib-copy": "^1.0.0",
 		"grunt-exec": "^3.0.0",
-		"mocha": "8.1.3",
+		"mocha": "^8.4.0",
 		"node-loader": "^1.0.3",
 		"ts-loader": "^8.3.0",
 		"vsce": "^1.96.3",
