--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 	"dependencies": {
 		"await-notify": "1.0.1",
 		"bufferutil": "^4.0.3",
+		"js-sorted-set": "^0.7.0",
 		"jsdom": "^16.7.0",
 		"json-schema-traverse": "^0.4.1",
 		"kotlin": "^1.5.30",
@@ -129,6 +130,11 @@
 					"type": "integer",
 					"default": -1,
 					"description": "Max number of steps: (Negative means ignored)"
+				},
+				"riscv-venus.onlyShowUsedRegs": {
+					"type": "boolean",
+					"default": false,
+					"description": "Only show registers used during execution (experimental)"
 				}
 			}
 		},
