--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 	"dependencies": {
 		"await-notify": "1.0.1",
 		"bufferutil": "^4.0.3",
+		"gradle": "^1.2.4",
 		"jsdom": "^16.7.0",
 		"kotlin": "^1.5.30",
 		"lodash": "^4.17.21",
@@ -72,6 +73,7 @@
 		"grunt-exec": "^3.0.0",
 		"mocha": "8.1.3",
 		"node-loader": "^1.0.3",
+		"source-map-loader": "^3.0.0",
 		"ts-loader": "^8.3.0",
 		"vsce": "^1.96.3",
 		"vscode-debugadapter-testsupport": "1.41.0",
