--- a/package.json
+++ b/package.json
@@ -80,8 +80,7 @@
 		"vsce": "^1.96.3",
 		"vscode-debugadapter-testsupport": "1.41.0",
 		"webpack": "^5.9.0",
-		"webpack-cli": "^4.2.0",
-		"source-map-loader": "^3.0.0"
+		"webpack-cli": "^4.2.0"
 	},
 	"main": "./dist/extension.js",
 	"activationEvents": [
