--- a/package.json
+++ b/package.json
@@ -74,12 +74,12 @@
 		"grunt-exec": "^3.0.0",
 		"mocha": "^8.4.0",
 		"node-loader": "^1.0.3",
+		"source-map-loader": "^3.0.0",
 		"ts-loader": "^8.3.0",
 		"vsce": "^1.96.3",
 		"vscode-debugadapter-testsupport": "1.41.0",
 		"webpack": "^5.9.0",
-		"webpack-cli": "^4.2.0",
-		"source-map-loader": "^3.0.0"
+		"webpack-cli": "^4.2.0"
 	},
 	"main": "./dist/extension.js",
 	"activationEvents": [
