--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "riscv-venus",
 	"displayName": "RISC-V Venus Simulator",
-	"version": "1.7.0",
+	"version": "1.7.1",
 	"publisher": "hm",
 	"description": "RISC-V Venus Simulator embedded in VS Code",
 	"author": {
@@ -53,7 +53,7 @@
 		"node-localstorage": "^2.2.1",
 		"typescript": "^4.4.2",
 		"utf-8-validate": "^5.0.5",
-		"vscode-debugadapter": "1.41.1"
+		"@vscode/debugadapter": "1.63.0"
 	},
 	"devDependencies": {
 		"@types/glob": "7.1.4",
@@ -77,7 +77,7 @@
 		"source-map-loader": "^3.0.0",
 		"ts-loader": "^8.3.0",
 		"vsce": "^1.96.3",
-		"vscode-debugadapter-testsupport": "1.41.0",
+		"@vscode/debugadapter-testsupport": "1.63.0",
 		"webpack": "^5.9.0",
 		"webpack-cli": "^4.2.0"
 	},
