--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"webpack-dev": "webpack --mode development --watch"
 	},
 	"dependencies": {
+		"@vscode/debugadapter": "1.63.0",
 		"await-notify": "1.0.1",
 		"bufferutil": "^4.0.3",
 		"js-sorted-set": "^0.7.0",
@@ -52,8 +53,7 @@
 		"lodash": "^4.17.21",
 		"node-localstorage": "^2.2.1",
 		"typescript": "^4.4.2",
-		"utf-8-validate": "^5.0.5",
-		"@vscode/debugadapter": "1.63.0"
+		"utf-8-validate": "^5.0.5"
 	},
 	"devDependencies": {
 		"@types/glob": "7.1.4",
@@ -62,7 +62,9 @@
 		"@types/vscode": "^1.48.0",
 		"@typescript-eslint/eslint-plugin": "^4.30.0",
 		"@typescript-eslint/parser": "^4.30.0",
+		"@vscode/debugadapter-testsupport": "1.63.0",
 		"@vscode/test-electron": "^1.6.2",
+		"@vscode/vsce": "^2.22.0",
 		"eslint": "^7.32.0",
 		"eslint-config-standard": "^16.0.3",
 		"eslint-plugin-import": "^2.24.2",
@@ -72,12 +74,10 @@
 		"grunt-cli": "^1.4.3",
 		"grunt-contrib-copy": "^1.0.0",
 		"grunt-exec": "^3.0.0",
-		"mocha": "^8.4.0",
+		"mocha": "^10.2.0",
 		"node-loader": "^1.0.3",
 		"source-map-loader": "^3.0.0",
 		"ts-loader": "^8.3.0",
-		"vsce": "^1.96.3",
-		"@vscode/debugadapter-testsupport": "1.63.0",
 		"webpack": "^5.9.0",
 		"webpack-cli": "^4.2.0"
 	},
