Don't try to publish pre-releases to marketplace

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,7 @@ jobs:
           prerelease: false
           files: ./**.vsix
       - name: Vscode release plugin
+        if: contains(github.ref.contains, '-')
         env:
           PUBLISHER_TOKEN: ${{ secrets.PUBLISHER_TOKEN }}
         run: |
