--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,9 +31,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          name: Release ${{ github.ref }}
+          name: Release ${{ github.ref_name }}
           draft: false
-          prerelease: false
+          prerelease: contains(github.ref.contains, '-')
           files: ./**.vsix
       - name: Vscode release plugin
         if: contains(github.ref.contains, '-')
