--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,11 @@ jobs:
         run: npm run compile
       - name: Package extension
         run: npm run package
+      - name: Create release name
+        run: |
+          REFNAME=${{ github.ref_name }}
+          RELEASENAME="${REFNAME//v/}"
+          echo $RELEASENAME
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
@@ -31,7 +36,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          name: Release ${{ github.ref_name }}
+          name: Release ${{ env.RELEASENAME }}
           draft: false
           prerelease: contains(github.ref, '-')
           files: ./**.vsix
