Fix release logic

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,16 +38,15 @@ jobs:
           tag_name: ${{ github.ref }}
           name: Release ${{ steps.prep_version.outputs.version }}
           draft: false
-          prerelease: contains(github.ref, '-')
           files: ./**.vsix
       - name: Vscode release plugin
-        if: contains(github.ref_name, '-')
+        if: !contains(github.ref_name, '-')
         env:
           PUBLISHER_TOKEN: ${{ secrets.PUBLISHER_TOKEN }}
         run: |
           npm run publish -- -p "$env:PUBLISHER_TOKEN"
       - name: Publish to Open VSX Registry
-        if: contains(github.ref_name, '-')
+        if: !contains(github.ref_name, '-')
         uses: HaaLeo/publish-vscode-extension@v1
         with:
           pat: ${{ secrets.OPEN_VSX_TOKEN }}
