Proper expression syntax

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,13 +43,13 @@ jobs:
           prerelease: ${{ steps.prep_version.outputs.is_prerelease }}
           files: ./**.vsix
       - name: Vscode release plugin
-        if: !contains(github.ref_name, '-')
+        if: ${{ !contains(github.ref_name, '-') }}
         env:
           PUBLISHER_TOKEN: ${{ secrets.PUBLISHER_TOKEN }}
         run: |
           npm run publish -- -p "$env:PUBLISHER_TOKEN"
       - name: Publish to Open VSX Registry
-        if: !contains(github.ref_name, '-')
+        if: ${{ !contains(github.ref_name, '-') }}
         uses: HaaLeo/publish-vscode-extension@v1
         with:
           pat: ${{ secrets.OPEN_VSX_TOKEN }}
