--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,8 +29,8 @@ jobs:
         run: |
           export test_version=$(echo ${{ github.ref_name }} |  sed 's/v//g')
           export is_prerelease=$(if [[ $test_version == *"-"* ]]; then echo "true"; else echo "false"; fi)
-          echo ::set-output name=version::$test_version
-          echo ::set-output name=is_prerelease::$is_prerelease
+          echo "version=$test_version" >> "$GITHUB_ENV"
+          echo "is_prerelease=$is_prerelease" >> "$GITHUB_ENV"
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
@@ -38,9 +38,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          name: Release ${{ steps.prep_version.outputs.version }}
+          name: "Release $version"
           draft: false
-          prerelease: ${{ steps.prep_version.outputs.is_prerelease }}
+          prerelease: "$is_prerelease"
           files: ./**.vsix
       - name: Vscode release plugin
         if: ${{ !contains(github.ref_name, '-') }}
