--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,9 +38,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          name: Release $version
+          name: Release ${{ env.version }}
           draft: false
-          prerelease: $is_prerelease
+          prerelease: ${{ env.is_prerelease }}
           files: ./**.vsix
       - name: Vscode release plugin
         if: ${{ !contains(github.ref_name, '-') }}
