Fix the release (hopefully)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
         env:
           PUBLISHER_TOKEN: ${{ secrets.PUBLISHER_TOKEN }}
         run: |
-          npm run publish -- -p "$env:PUBLISHER_TOKEN"
+          npm run publish -- -p ${{ secrets.PUBLISHER_TOKEN }}
       - name: Publish to Open VSX Registry
         if: ${{ !contains(github.ref_name, '-') }}
         uses: HaaLeo/publish-vscode-extension@v1
